--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="box">
+
+    </div>
+    <div class="spinner">
+        <div class="inner_spinner"></div>
+        <div class="parent">
+<div class="bullet first"></div>
+<div class="bullet second"></div>
+<div class="bullet third"></div>
+<!-- <div class="bullet fourth"></div> -->
+
+
+        </div>
+    </div>
 </body>
 </html>
